fixed padding
lable/input overlap

--- a/src/app/pages/report/shift-report/night-patrol-stop-details/night-patrol-stop-details.page.scss
+++ b/src/app/pages/report/shift-report/night-patrol-stop-details/night-patrol-stop-details.page.scss
@@ -9,6 +9,7 @@ ion-button{
 
 ion-label{
    font-size: medium !important;
+   padding-bottom: 10px;
    
 }
 .shift-location-text {
